# BALLPREDICT-

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: games.py  health.py  simulations.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: entities.py
backend/app/schemas/: game.py
backend/app/services/: insight_service.py  live_game_service.py  nba_api_service.py  projection_service.py  ws_manager.py
backend/app/services/providers/: nba_live_client.py
backend/app/simulation/: coaching_engine.py  prediction_engine.py  state.py
backend/app/workers/: train_models.py
backend/ballpredict_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: build_training_data.py  refresh_db.py  train_model.py
backend/tests/: test_simulation.py
docs/: architecture.md  database-schema.md  datasets-and-apis.md  deployment.md  ml-pipeline.md  roadmap.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CoachingAdjustmentPanel.tsx  InsightPanel.tsx  MomentumCard.tsx  PlayerProjectionTable.tsx  PossessionFeed.tsx  QuarterProjectionTable.tsx  Scoreboard.tsx  WinProbabilityChart.tsx
frontend/src/lib/: api.ts  mockData.ts
frontend/src/pages/: GameDetailPage.tsx  PlayerDetailPage.tsx  SlatePage.tsx
frontend/src/types/: index.ts
infra/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
