[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ballpredict-backend"
version = "0.1.0"
description = "BallPredict FastAPI backend and basketball simulation engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.31",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.7",
  "httpx>=0.27.0",
  "numpy>=2.0.0",
  "pandas>=2.2.2",
  "scikit-learn>=1.5.1",
  "xgboost>=2.1.0",
  "lightgbm>=4.5.0",
  "orjson>=3.10.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

